--- a/package.json
+++ b/package.json
@@ -7,11 +7,9 @@
     "@testing-library/react": "13.3.0",
     "@testing-library/user-event": "13.5.0",
     "aos": "2.3.4",
-    "node-sass": "7.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-scripts": "5.0.1",
-    "sass": "1.54.4",
     "web-vitals": "2.1.4"
   },
   "scripts": {
@@ -37,5 +35,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "sass": "^1.93.0"
   }
 }
