--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "15.0.3",
+    "next": "^15.6.0-canary.29",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-icons": "^5.5.0",
+    "react-server-dom-webpack": "^19.2.0-canary-e2332183-20250924",
     "sass": "^1.93.2",
+    "sass-loader": "^16.0.5",
     "sitemap": "^8.0.0",
     "tailwind-merge": "^3.3.1"
   },
